adjusted some more things in the sidebar

--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
-title: The Butler
+title: The Trough
 baseline: Your blogging assistant
-description: A ready to use static blog, powered by Cecil.
+description: Mostly pinball, some dogs.
 baseurl: /
 canonicalurl: true
-keywords: [Cecil, Static Site Generator, SSG]
+keywords: [pinball, pin2dmd, dogs]
 author: Arnaud Ligny
 date:
   format: j F Y
