--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 title: The Trough
 baseline: Your blogging assistant
 description: Mostly pinball, some dogs.
-baseurl: /
+baseurl: http://blog.badbiscuits.co/
 canonicalurl: true
 keywords: [pinball, pin2dmd, dogs]
 author: Arnaud Ligny
