adjust the title

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-title: The Trough
+title: Word Go Here
 baseline: Your blogging assistant
 description: Mostly pinball, some dogs.
 baseurl: http://blog.badbiscuits.co/
