typos and cleanup

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-title: Word Go Here
+title: Words Go Here
 baseline: Your blogging assistant
 description: Mostly pinball, some dogs.
 baseurl: http://blog.badbiscuits.co/
